Redid link access prevention (doesn't hide, just blocks and throws an alert); also added logout button functionality (needs improved appearance)

--- a/Assignment2/contact-us.html
+++ b/Assignment2/contact-us.html
@@ -9,6 +9,7 @@
         <div class="header">
         <h1 style="display:inline">Contact-Us</h1>
         <h1 id="namedrop" style="display:inline"></h1>
+        <button id="logoutLink" style="display:none">Log Out</button>
     </div>
 
     <div class="row">
@@ -16,13 +17,13 @@
             <a href="home.html">Home</a>
             <a href="register.html">Register</a>
             <a href="login.html">Login</a>
-            <a href="account.html">Account</a>
-            <a href="stays.html">Stays</a>
-            <a href="flights.html">Flights</a>
-            <a href="cars.html">Cars</a>
-            <a href="cruises.html">Cruises</a>
-            <a href="contact-us.html">Contact us</a>
-            <a href="cart.html">Cart</a>
+            <a href="account.html" class="requires-login">Account</a>
+            <a href="stays.html" class="requires-login">Stays</a>
+            <a href="flights.html" class="requires-login">Flights</a>
+            <a href="cars.html" class="requires-login">Cars</a>
+            <a href="cruises.html" class="requires-login">Cruises</a>
+            <a href="contact-us.html" class="requires-login">Contact us</a>
+            <a href="cart.html" class="requires-login">Cart</a>
         </div>
     </div>
 
