--- a/Assignment2/register.html
+++ b/Assignment2/register.html
@@ -9,6 +9,7 @@
         <div class="header">
         <h1 style="display:inline">Register</h1>
         <h1 id="namedrop" style="display:inline"></h1>
+        <button id="logoutLink" style="display:none">Log Out</button>
     </div>
 
     <div class="row">
@@ -16,13 +17,13 @@
             <a href="home.html">Home</a>
             <a href="register.html">Register</a>
             <a href="login.html">Login</a>
-            <a id="account" href="account.html">Account</a>
-            <a id="stays" href="stays.html">Stays</a>
-            <a id="flights" href="flights.html">Flights</a>
-            <a id="cars" href="cars.html">Cars</a>
-            <a id="cruises" href="cruises.html">Cruises</a>
-            <a id="contact-us" href="contact-us.html">Contact us</a>
-            <a id="cart" href="cart.html">Cart</a>
+            <a href="account.html" class="requires-login">Account</a>
+            <a href="stays.html" class="requires-login">Stays</a>
+            <a href="flights.html" class="requires-login">Flights</a>
+            <a href="cars.html" class="requires-login">Cars</a>
+            <a href="cruises.html" class="requires-login">Cruises</a>
+            <a href="contact-us.html" class="requires-login">Contact us</a>
+            <a href="cart.html" class="requires-login">Cart</a>
         </div>
     </div>
 
