Register/Login/Logout fixed

--- a/Assignment2/login.html
+++ b/Assignment2/login.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/mystyle.css">
         <script type="text/javascript" src="assets/js/travel.js"></script>
     </head>
-    <body id="home">
+    <body id="login">
         <div class="header">
         <h1>Login</h1>
         <h1 id="namedrop"></h1>
