--- a/Assignment2/register.html
+++ b/Assignment2/register.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/mystyle.css">
         <script type="text/javascript" src="assets/js/travel.js"></script>
     </head>
-    <body id="home">
+    <body id="register">
         <div class="header">
         <h1 style="display:inline">Register</h1>
         <h1 id="namedrop" style="display:inline"></h1>
@@ -61,7 +61,6 @@
                 <input type="password" name="confirm_password" placeholder="Confirm Password" required><br>
                 <button type="submit" name="register">Register</button>
             </form>
-            <p style="color: red;"><?php echo $register_message; ?></p>
         </div>
     </div>
 
