Managed to get the hotel booking working

--- a/Assignment2/account.html
+++ b/Assignment2/account.html
@@ -4,7 +4,7 @@
         <title>Account</title>
         <link rel="stylesheet" type="text/css" href="assets/css/mystyle.css">
         <script type="text/javascript" src="assets/js/travel.js"></script>
-        <script type="text/javascript" src="assets/js/helper.js"></script>
+        <script type="text/javascript" src="assets/js/account.js"></script>
     </head>
     <body id="account">
         <div class="header">
@@ -49,9 +49,11 @@
             <br>
         </div>
         <div class="column middle">
-            <h2>Main content</h2>
-            <h3>Current Date/Time: </h3>
-            <p id="datetimenow"></p>
+            <div>
+                <h2>Load Hotels from XML into SQL</h2>
+                <button id="loadHotelsBtn">Load Hotels</button>
+                <div id="result"></div>
+            </div>
         </div>
     </div>
 
