Implemented admin element hiding

--- a/Assignment2/account.html
+++ b/Assignment2/account.html
@@ -49,7 +49,7 @@
             <br>
         </div>
         <div class="column middle">
-            <div>
+            <div class="requires-admin">
                 <h2>Load Hotels from XML into SQL</h2>
                 <button id="loadHotelsBtn">Load Hotels</button>
                 <div id="result"></div>
