Edit style for query function

--- a/Assignment2/account.html
+++ b/Assignment2/account.html
@@ -52,24 +52,24 @@
                 <div>
                     <h2>Lookup by Booking ID (User)</h2>
                     <div>
-                        <label>Flight Booking ID: <input id="flightBookingId" type="text"></label>
+                        <label>Flight Booking ID: <input id="flightBookingId" type="text"></label><br>
                         <button onclick="queryFlightBooking()">Get Flight Booking</button>
-                    </div>
+                    </div><br>
                     <div>
-                        <label>Hotel Booking ID: <input id="hotelBookingId" type="text"></label>
+                        <label>Hotel Booking ID: <input id="hotelBookingId" type="text"></label><br>
                         <button onclick="queryHotelBooking()">Get Hotel Booking</button>
-                    </div>
+                    </div><br>
                     <div>
-                        <label>Flight Booking ID (Passengers): <input id="flightBookingIdPassengers" type="text"></label>
+                        <label>Flight Booking ID (Passengers): <input id="flightBookingIdPassengers" type="text"></label><br>
                         <button onclick="queryPassengers()">Get Passengers</button>
                     </div>
                     <div>
-                        <button onclick="querySeptemberBookings()">Get All Bookings (Sep 2024)</button>
-                    </div>
+                        <button onclick="querySeptemberBookings()">Get All Bookings (Sep 2024)</button><br>
+                    </div><br>
                     <div>
-                        <label>Search Bookings by SSN: <input id="ssnQuery" type="text"></label>
+                        <label>Search Bookings by SSN: <input id="ssnQuery" type="text"></label><br>
                         <button onclick="queryBySSN()">Search by SSN</button>
-                    </div>
+                    </div><br>
                 </div>
 
                 <hr>
@@ -77,30 +77,30 @@
                 <div class="requires-admin">
                     <h2>Admin Queries</h2>
                     <div>
-                        <label>Texas city substring (e.g. "Dallas, TX"): <input id="texasCity" type="text" placeholder="e.g. Dallas, TX"></label>
-                        <button onclick="adminFlightsFromTexasSepOct()">Flights from Texas (Sep–Oct 2024)</button>
+                        <label>Texas city substring (e.g. "Dallas, TX"): <input id="texasCity" type="text" placeholder="e.g. Dallas, TX"></label><br>
+                        <button onclick="adminFlightsFromTexasSepOct()">Flights from Texas (Sep–Oct 2024)</button><br>
                         <button onclick="adminFlightsFromTexasNoInfant()">Flights from Texas (no infants) (Sep–Oct 2024)</button>
-                    </div>
+                    </div><br>
 
                     <div>
-                        <label>Texas hotel city substring (e.g. "Austin, TX"): <input id="texasHotelCity" type="text" placeholder="e.g. Austin, TX"></label>
+                        <label>Texas hotel city substring (e.g. "Austin, TX"): <input id="texasHotelCity" type="text" placeholder="e.g. Austin, TX"></label><br>
                         <button onclick="adminHotelsInTexasSepOct()">Hotels in Texas (Sep–Oct 2024)</button>
-                    </div>
+                    </div><br>
 
                     <div>
-                        <button onclick="adminMostExpensiveHotels()">Most Expensive Booked Hotels (Top 10)</button>
-                        <button onclick="adminMostExpensiveFlights()">Most Expensive Booked Flights (Top 10)</button>
-                    </div>
+                        <button onclick="adminMostExpensiveHotels()">Most Expensive Booked Hotels</button><br>
+                        <button onclick="adminMostExpensiveFlights()">Most Expensive Booked Flights</button>
+                    </div><br>
 
                     <div>
-                        <button onclick="adminFlightsWithInfant()">Flights with Infant</button>
+                        <button onclick="adminFlightsWithInfant()">Flights with Infant</button><br>
                         <button onclick="adminFlightsWithInfantAnd5Children()">Flights with Infant and ≥5 Children</button>
-                    </div>
+                    </div><br>
 
                     <div>
-                        <label>California arrival substring (e.g. "Los Angeles, CA"): <input id="californiaCity" type="text" placeholder="e.g. Los Angeles, CA"></label>
+                        <label>California arrival substring (e.g. "Los Angeles, CA"): <input id="californiaCity" type="text" placeholder="e.g. Los Angeles, CA"></label><br>
                         <button onclick="adminFlightsArrivingCaliforniaSepOct()">Count Flights Arriving to CA (Sep–Oct 2024)</button>
-                    </div>
+                    </div><br>
 
                     <hr>
 
