Flights page function

--- a/Assignment2/account.html
+++ b/Assignment2/account.html
@@ -53,6 +53,9 @@
                 <h2>Load Hotels from XML into SQL</h2>
                 <button id="loadHotelsBtn">Load Hotels</button>
                 <div id="result"></div>
+                <h2>Load Flights from JSON into SQL</h2>
+                <button id="loadFlightsBtn">Load Flights</button>
+                <div id="flightsResult"></div>
             </div>
         </div>
     </div>
