--- a/Assignment2/cart.html
+++ b/Assignment2/cart.html
@@ -50,16 +50,20 @@
         </div>
         <div class="column middle">
             <div class="cart-container">
-                <div class="column next">
-                    <h3>Passenger Information:</h3>
+                <div class="column next" id="passengerInfoContainer">
+                    <h3 id="passengerInfoTitle">Passenger Information:</h3>
                     <p id="passinfo"></p>
                 </div>
 
                 <div class="column next">
-                    <h3>Selected Flights:</h3>
+                    <div id="bookinginfo"></div>
+                    <h3 id="selectedFlightsTitle">Selected Flights:</h3>
                     <p id="flightinfo"></p>
-                    <h3>Total Price:</h3>
+                    <h3 id="totalPriceTitle">Total Price:</h3>
                     <p id="totalpriceinfo"></p>    
+                    <div id="bookFlightBtnContainer">
+                        <button id="bookFlightBtn" type="button">Book Flight</button>
+                    </div>
                 </div>
                 
                 <div class="column next">
