--- a/Assignment2/account.html
+++ b/Assignment2/account.html
@@ -13,6 +13,21 @@
             <button id="logoutLink" style="display:none">Log Out</button>
         </div>
 
+        <div class="row">
+            <div class="topnav">
+                <a href="home.html">Home</a>
+                <a href="register.html">Register</a>
+                <a href="login.html">Login</a>
+                <a href="account.html" class="requires-login">Account</a>
+                <a href="stays.html" class="requires-login">Stays</a>
+                <a href="flights.html" class="requires-login">Flights</a>
+                <a href="cars.html" class="requires-login">Cars</a>
+                <a href="cruises.html" class="requires-login">Cruises</a>
+                <a href="contact-us.html" class="requires-login">Contact us</a>
+                <a href="cart.html" class="requires-login">Cart</a>
+            </div>
+        </div>
+
     <div class="row">
         <div class="column side">
             <h2>Left Side</h2>
