Category fixed (took several hours, by the way)

--- a/Assignment2/account.html
+++ b/Assignment2/account.html
@@ -8,8 +8,10 @@
     </head>
     <body id="account">
         <div class="header">
-            <h1 style="display:inline">Account</h1>
-            <h1 id="namedrop" style="display:inline"></h1>
+            <div class="header-title">
+                <h1 id="namedrop" style="display:inline"></h1>
+                <h1 style="display:inline">- Account</h1>
+            </div>
             <button id="logoutLink" style="display:none">Log Out</button>
         </div>
     
@@ -23,7 +25,7 @@
                 <a href="flights.html" class="requires-login">Flights</a>
                 <a href="cars.html" class="requires-login">Cars</a>
                 <a href="cruises.html" class="requires-login">Cruises</a>
-                <a href="contact-us.html" class="requires-login">Contact us</a>
+                <a href="contact-us.html" class="requires-login">Contact Us</a>
                 <a href="cart.html" class="requires-login">Cart</a>
             </div>
         </div>
