--- a/Assignment2/stays.html
+++ b/Assignment2/stays.html
@@ -9,8 +9,10 @@
 </head>
 <body id="stays">
     <div class="header">
-        <h1 style="display:inline">Stays</h1>
-        <h1 id="namedrop" style="display:inline"></h1>
+        <div class="header-title">
+            <h1 id="namedrop" style="display:inline"></h1>
+            <h1 style="display:inline">- Stays</h1>
+        </div>
         <button id="logoutLink" style="display:none">Log Out</button>
     </div>
 
@@ -24,7 +26,7 @@
             <a href="flights.html" class="requires-login">Flights</a>
             <a href="cars.html" class="requires-login">Cars</a>
             <a href="cruises.html" class="requires-login">Cruises</a>
-            <a href="contact-us.html" class="requires-login">Contact us</a>
+            <a href="contact-us.html" class="requires-login">Contact Us</a>
             <a href="cart.html" class="requires-login">Cart</a>
         </div>
     </div>
