--- a/Assignment2/contact-us.html
+++ b/Assignment2/contact-us.html
@@ -7,75 +7,77 @@
     </head>
     <body id="contact-us">
         <div class="header">
-        <h1 style="display:inline">Contact-Us</h1>
-        <h1 id="namedrop" style="display:inline"></h1>
-        <button id="logoutLink" style="display:none">Log Out</button>
-    </div>
+            <div class="header-title">
+                <h1 id="namedrop" style="display:inline"></h1>
+                <h1 style="display:inline">- Contact Us</h1>
+            </div>
+            <button id="logoutLink" style="display:none">Log Out</button>
+        </div>
 
-    <div class="row">
-        <div class="topnav">
-            <a href="home.html">Home</a>
-            <a href="register.html">Register</a>
-            <a href="login.html">Login</a>
-            <a href="account.html" class="requires-login">Account</a>
-            <a href="stays.html" class="requires-login">Stays</a>
-            <a href="flights.html" class="requires-login">Flights</a>
-            <a href="cars.html" class="requires-login">Cars</a>
-            <a href="cruises.html" class="requires-login">Cruises</a>
-            <a href="contact-us.html" class="requires-login">Contact us</a>
-            <a href="cart.html" class="requires-login">Cart</a>
+        <div class="row">
+            <div class="topnav">
+                <a href="home.html">Home</a>
+                <a href="register.html">Register</a>
+                <a href="login.html">Login</a>
+                <a href="account.html" class="requires-login">Account</a>
+                <a href="stays.html" class="requires-login">Stays</a>
+                <a href="flights.html" class="requires-login">Flights</a>
+                <a href="cars.html" class="requires-login">Cars</a>
+                <a href="cruises.html" class="requires-login">Cruises</a>
+                <a href="contact-us.html" class="requires-login">Contact Us</a>
+                <a href="cart.html" class="requires-login">Cart</a>
+            </div>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="column side">
-            <h2>Left Side</h2>
-            <p class="prefselector">Choose background color: </p>
-            <select id="colorpicker" onchange="colorChange()">
-                <option value="white" selected="true">White</option>
-                <option value="lightgray">Light Gray</option>
-                <option value="darkgray">Dark Gray</option>
-            </select>
-            <br>
-            <p class="prefselector">Choose font size: </p>
-            <select id="sizepicker" onchange="fontChange()">
-                <option value="12px" >12</option>
-                <option value="16px" selected="true">16</option>
-                <option value="18px">18</option>
-                <option value="20px">20</option>
-                <option value="24px">24</option>
-            </select>
-            <br>
+        <div class="row">
+            <div class="column side">
+                <h2>Left Side</h2>
+                <p class="prefselector">Choose background color: </p>
+                <select id="colorpicker" onchange="colorChange()">
+                    <option value="white" selected="true">White</option>
+                    <option value="lightgray">Light Gray</option>
+                    <option value="darkgray">Dark Gray</option>
+                </select>
+                <br>
+                <p class="prefselector">Choose font size: </p>
+                <select id="sizepicker" onchange="fontChange()">
+                    <option value="12px" >12</option>
+                    <option value="16px" selected="true">16</option>
+                    <option value="18px">18</option>
+                    <option value="20px">20</option>
+                    <option value="24px">24</option>
+                </select>
+                <br>
+            </div>
+            <div class="column middle">
+                <h2>Contact Form</h2>
+                <form id="contact-usForm">
+                    First name:<br>
+                    <input id="firstname" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="firstname"><br>
+                    Last name:<br>
+                    <input id="lastname" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="lastname"><br>
+                    Phone Number:<br>
+                    <input id="phone" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="phone"><br>
+                    Gender:<br>
+                    <input type="radio" name="gender" value="male">
+                    <label >Male</label>
+                    <input type="radio" name="gender" value="female">
+                    <label >Female</label><br>
+                    Email:<br>
+                    <input id="email" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="email"><br>
+                    Comment:<br>
+                    <input id="comment" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="comment"><br><br>
+                    <button type="button" onclick="validateInfoContact()">Submit</button>
+                </form>
+                <p id="contactInfo"></p>
+            </div>
         </div>
-        <div class="column middle">
-            <h2>Contact Form</h2>
-            <form id="contact-usForm">
-                First name:<br>
-                <input id="firstname" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="firstname"><br>
-                Last name:<br>
-                <input id="lastname" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="lastname"><br>
-                Phone Number:<br>
-                <input id="phone" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="phone"><br>
-                Gender:<br>
-                <input type="radio" name="gender" value="male">
-                <label >Male</label>
-                <input type="radio" name="gender" value="female">
-                <label >Female</label><br>
-                Email:<br>
-                <input id="email" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="email"><br>
-                Comment:<br>
-                <input id="comment" type="text" onfocus="myFocus(this)" onblur="myBlur(this)" name="comment"><br><br>
-                <button type="button" onclick="validateInfoContact()">Submit</button>
-            </form>
-            <p id="contactInfo"></p>
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="footer">
-            <h3 id="Names">Nicholas Aminzadeh, NHA190001 | Changhui Sun, CXS240024 | Thi Vu, TAV180002</h3>
+        <div class="row">
+            <div class="footer">
+                <h3 id="Names">Nicholas Aminzadeh, NHA190001 | Changhui Sun, CXS240024 | Thi Vu, TAV180002</h3>
+            </div>
         </div>
-    </div>
 
     </body>
 </html>
