--- a/Assignment2/flights.html
+++ b/Assignment2/flights.html
@@ -7,9 +7,11 @@
     </head>
     <body id="flights">
         <div class="header">
-            <h1 style="display:inline">Flights</h1>
-        <h1 id="namedrop" style="display:inline"></h1>
-        <button id="logoutLink" style="display:none">Log Out</button>
+            <div class="header-title">
+                <h1 id="namedrop" style="display:inline"></h1>
+                <h1 style="display:inline">- Flights</h1>
+            </div>
+            <button id="logoutLink" style="display:none">Log Out</button>
         </div>
 
     <div class="row">
@@ -22,7 +24,7 @@
             <a href="flights.html" class="requires-login">Flights</a>
             <a href="cars.html" class="requires-login">Cars</a>
             <a href="cruises.html" class="requires-login">Cruises</a>
-            <a href="contact-us.html" class="requires-login">Contact us</a>
+            <a href="contact-us.html" class="requires-login">Contact Us</a>
             <a href="cart.html" class="requires-login">Cart</a>
         </div>
     </div>
