--- a/Assignment2/login.html
+++ b/Assignment2/login.html
@@ -7,66 +7,68 @@
     </head>
     <body id="login">
         <div class="header">
-        <h1>Login</h1>
-        <h1 id="namedrop"></h1>
-        <button id="logoutLink" style="display:none">Log Out</button>
-    </div>
-
-    <div class="row">
-        <div class="topnav">
-            <a href="home.html">Home</a>
-            <a href="register.html">Register</a>
-            <a href="login.html">Login</a>
-            <a id="account" href="account.html" class="requires-login">Account</a>
-            <a id="stays" href="stays.html" class="requires-login">Stays</a>
-            <a id="flights" href="flights.html" class="requires-login">Flights</a>
-            <a id="cars" href="cars.html" class="requires-login">Cars</a>
-            <a id="cruises" href="cruises.html" class="requires-login">Cruises</a>
-            <a id="contact-us" href="contact-us.html" class="requires-login">Contact us</a>
-            <a id="cart" href="cart.html" class="requires-login">Cart</a>
+            <div class="header-title">
+                <h1 id="namedrop" style="display:inline"></h1>
+                <h1 style="display:inline">- Login</h1>
+            </div>
+            <button id="logoutLink" style="display:none">Log Out</button>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="column side">
-            <h2>Left Side</h2>
-            <p class="prefselector">Choose background color: </p>
-            <select id="colorpicker" onchange="colorChange()">
-                <option value="white" selected="true">White</option>
-                <option value="lightgray">Light Gray</option>
-                <option value="darkgray">Dark Gray</option>
-            </select>
-            <br>
-            <p class="prefselector">Choose font size: </p>
-            <select id="sizepicker" onchange="fontChange()">
-                <option value="12px" >12</option>
-                <option value="16px" selected="true">16</option>
-                <option value="18px">18</option>
-                <option value="20px">20</option>
-                <option value="24px">24</option>
-            </select>
-            <br>
+        <div class="row">
+            <div class="topnav">
+                <a href="home.html">Home</a>
+                <a href="register.html">Register</a>
+                <a href="login.html">Login</a>
+                <a id="account" href="account.html" class="requires-login">Account</a>
+                <a id="stays" href="stays.html" class="requires-login">Stays</a>
+                <a id="flights" href="flights.html" class="requires-login">Flights</a>
+                <a id="cars" href="cars.html" class="requires-login">Cars</a>
+                <a id="cruises" href="cruises.html" class="requires-login">Cruises</a>
+                <a id="contact-us" href="contact-us.html" class="requires-login">Contact Us</a>
+                <a id="cart" href="cart.html" class="requires-login">Cart</a>
+            </div>
         </div>
-        <div class="column middle">
-            <h2>Login</h2>
-            <form method="post" action="login.php">
-                Phone Number:<br>
-                <input type="text" name="phone" placeholder="ddd-ddd-dddd" required><br><br>
-                Password:<br>
-                <input type="password" name="password" required><br><br>
-                <button type="submit">Login</button>
-            </form>
 
-            <!-- Print login message -->
-            <?php include "login.php"; ?> 
-        </div>
-    </div>
+        <div class="row">
+            <div class="column side">
+                <h2>Left Side</h2>
+                <p class="prefselector">Choose background color: </p>
+                <select id="colorpicker" onchange="colorChange()">
+                    <option value="white" selected="true">White</option>
+                    <option value="lightgray">Light Gray</option>
+                    <option value="darkgray">Dark Gray</option>
+                </select>
+                <br>
+                <p class="prefselector">Choose font size: </p>
+                <select id="sizepicker" onchange="fontChange()">
+                    <option value="12px" >12</option>
+                    <option value="16px" selected="true">16</option>
+                    <option value="18px">18</option>
+                    <option value="20px">20</option>
+                    <option value="24px">24</option>
+                </select>
+                <br>
+            </div>
+            <div class="column middle">
+                <h2>Login</h2>
+                <form method="post" action="login.php">
+                    Phone Number:<br>
+                    <input type="text" name="phone" placeholder="ddd-ddd-dddd" required><br><br>
+                    Password:<br>
+                    <input type="password" name="password" required><br><br>
+                    <button type="submit">Login</button>
+                </form>
 
-    <div class="row">
-        <div class="footer">
-            <h3 id="Names">Nicholas Aminzadeh, NHA190001 | Changhui Sun, CXS240024 | Thi Vu, TAV180002</h3>
+                <!-- Print login message -->
+                <?php include "login.php"; ?> 
+            </div>
         </div>
-    </div>
+
+        <div class="row">
+            <div class="footer">
+                <h3 id="Names">Nicholas Aminzadeh, NHA190001 | Changhui Sun, CXS240024 | Thi Vu, TAV180002</h3>
+            </div>
+        </div>
 
     </body>
 </html>
